d/c_header/numkong/scalar.h

/**
 *  @brief Scalar square root: `√x`.
 *
 *  @param[in] x The input value.
 *  @return The square root of @p x.
 */
NK_DYNAMIC nk_f32_t nk_f32_sqrt(nk_f32_t x);
/** @copydoc nk_f32_sqrt */
NK_DYNAMIC nk_f64_t nk_f64_sqrt(nk_f64_t x);
/**
 *  @brief Scalar reciprocal square root: `1/√x`.
 *  @sa std::rsqrt, @sa Rust f32::rsqrt
 *
 *  @param[in] x The input value.
 *  @return The reciprocal square root of @p x.
 */
NK_DYNAMIC nk_f32_t nk_f32_rsqrt(nk_f32_t x);
/** @copydoc nk_f32_rsqrt */
NK_DYNAMIC nk_f64_t nk_f64_rsqrt(nk_f64_t x);
/** @copydoc nk_f32_sqrt */
NK_DYNAMIC nk_f16_t nk_f16_sqrt(nk_f16_t x);
/** @copydoc nk_f32_rsqrt */
NK_DYNAMIC nk_f16_t nk_f16_rsqrt(nk_f16_t x);
NK_PUBLIC nk_f32_t nk_f32_sqrt(nk_f32_t x) {
#if NK_TARGET_HASWELL
    return nk_f32_sqrt_haswell(x);
#elif NK_TARGET_NEON
    return nk_f32_sqrt_neon(x);
#elif NK_TARGET_RVV
    return nk_f32_sqrt_rvv(x);
#elif NK_TARGET_V128RELAXED
    return nk_f32_sqrt_v128relaxed(x);
#else
    return nk_f32_sqrt_serial(x);
#endif
}
NK_PUBLIC nk_f64_t nk_f64_sqrt(nk_f64_t x) {
#if NK_TARGET_HASWELL
    return nk_f64_sqrt_haswell(x);
#elif NK_TARGET_NEON
    return nk_f64_sqrt_neon(x);
#elif NK_TARGET_RVV
    return nk_f64_sqrt_rvv(x);
#elif NK_TARGET_V128RELAXED
    return nk_f64_sqrt_v128relaxed(x);
#else
    return nk_f64_sqrt_serial(x);
#endif
}
NK_PUBLIC nk_f32_t nk_f32_rsqrt(nk_f32_t x) {
#if NK_TARGET_HASWELL
    return nk_f32_rsqrt_haswell(x);
#elif NK_TARGET_NEON
    return nk_f32_rsqrt_neon(x);
#elif NK_TARGET_RVV
    return nk_f32_rsqrt_rvv(x);
#elif NK_TARGET_V128RELAXED
    return nk_f32_rsqrt_v128relaxed(x);
#else
    return nk_f32_rsqrt_serial(x);
#endif
}
NK_PUBLIC nk_f64_t nk_f64_rsqrt(nk_f64_t x) {
#if NK_TARGET_HASWELL
    return nk_f64_rsqrt_haswell(x);
#elif NK_TARGET_NEON
    return nk_f64_rsqrt_neon(x);
#elif NK_TARGET_RVV
    return nk_f64_rsqrt_rvv(x);
#elif NK_TARGET_V128RELAXED
    return nk_f64_rsqrt_v128relaxed(x);
#else
    return nk_f64_rsqrt_serial(x);
#endif
}
NK_PUBLIC nk_f16_t nk_f16_sqrt(nk_f16_t x) {
#if NK_TARGET_SAPPHIRE
    return nk_f16_sqrt_sapphire(x);
#elif NK_TARGET_NEONHALF
    return nk_f16_sqrt_neonhalf(x);
#elif NK_TARGET_HASWELL
    return nk_f16_sqrt_haswell(x);
#else
    return nk_f16_sqrt_serial(x);
#endif
}
NK_PUBLIC nk_f16_t nk_f16_rsqrt(nk_f16_t x) {
#if NK_TARGET_SAPPHIRE
    return nk_f16_rsqrt_sapphire(x);
#elif NK_TARGET_NEONHALF
    return nk_f16_rsqrt_neonhalf(x);
#elif NK_TARGET_HASWELL
    return nk_f16_rsqrt_haswell(x);
#else
    return nk_f16_rsqrt_serial(x);
#endif
}